[project]
name = "gubbins-db"
description = "DB classes for the Gubbins diracx extension"
readme = "README.md"
requires-python = ">=3.11"
keywords = []
license = { text = "GPL-3.0-only" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "diracx-db",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = ["gubbins-testing", "diracx-testing"]

[project.entry-points."diracx.dbs.sql"]
LollygagDB = "gubbins.db.sql:LollygagDB"
JobDB = "gubbins.db.sql:GubbinsJobDB"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = "../../.."

[tool.hatch.build.targets.wheel]
packages = ["src/gubbins"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--cov=gubbins.db",
    "--cov-report=term-missing",
    # Both gubbins and diracx are needed here
    "-pgubbins.testing",
    "-pdiracx.testing",
    "-pdiracx.testing.osdb",
    "--import-mode=importlib",
]
asyncio_mode = "auto"
markers = [
    "enabled_dependencies: List of dependencies which should be available to the FastAPI test client",
]
